--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
     <div class="main-scroll">
         <div class="row">
-            <div class="text-block">
+            <div class="full-width-text-block">
                 <h2>Ceci est un Titre</h2>
                 <p>Ceci est un paragraphe</p>
                 <p>Ceci est un paragraphe un peu plus long et
@@ -35,7 +35,7 @@
         </div>
         <div class="row">
             <div class="row-right">
-                <canvas id="month-chart-canvas" class="bar-chart"></canvas>
+                <div class="bar-chart"><canvas id="month-chart-canvas"></canvas></div>
                 <select id="month-year-select">
                     <option value="2011">2011</option>
                     <option value="2012">2012</option>
@@ -91,7 +91,7 @@
                     accusantium molestias adipisci! Voluptate, ullam illo.</p>
             </div>
             <div class="row-right">
-                <canvas id="roads-chart-canvas" class="pie-chart"></canvas>
+                <div class="pie-chart"><canvas id="roads-chart-canvas"></canvas></div>
                 <select id="roads-year-select">
                     <option value="2011">2011</option>
                     <option value="2012">2012</option>
@@ -137,7 +137,7 @@
         </div>
         <div class="row">
             <div class="row-left">
-                <canvas id="severity-chart-canvas" class="pie-chart"></canvas>
+                <div class="pie-chart"><canvas id="severity-chart-canvas"></canvas></div>
                 <select id="severity-year-select">
                     <option value="2011">2011</option>
                     <option value="2012">2012</option>
@@ -201,7 +201,7 @@
                     accusantium molestias adipisci! Voluptate, ullam illo.</p>
             </div>
             <div class="row-right">
-                <canvas id="french-roads-chart-canvas" class="pie-chart"></canvas>
+                <div class="pie-chart"><canvas id="french-roads-chart-canvas"></canvas></div>
                 <select id="french-roads-year-select">
                     <option value="2019" selected>2019</option>
                     <option value="2020">2020</option>
@@ -308,7 +308,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="text-block">
+            <div class="full-width-text-block">
                 <h2>Accident per 1000</h2>
                 <p>Ceci est un paragraphe</p>
                 <p>Ceci est un paragraphe un peu plus long et
@@ -320,7 +320,7 @@
         </div>
         <div class="row">
             <div>
-                <canvas id="accident-bubble-chart-canvas" class="bubble-chart"></canvas>
+                <div class="bubble-chart"><canvas id="accident-bubble-chart-canvas"></canvas></div>
                 <select id="accident-1000-year-select">
                     <option value="2011">2011</option>
                     <option value="2012">2012</option>
@@ -337,7 +337,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="text-block">
+            <div class="full-width-text-block">
                 <h2>French Accident per 1000</h2>
                 <p>Ceci est un paragraphe</p>
                 <p>Ceci est un paragraphe un peu plus long et
@@ -349,7 +349,7 @@
         </div>
         <div class="row">
             <div>
-                <canvas id="french-accident-bubble-chart-canvas" class="bubble-chart"></canvas>
+                <div class="bubble-chart"><canvas id="french-accident-bubble-chart-canvas"></canvas></div>
                 <select id="french-accident-1000-year-select">
                     <option value="2019" selected>2019</option>
                     <option value="2020">2020</option>
