--- a/index.html
+++ b/index.html
@@ -35,48 +35,50 @@
         </div>
         <div class="row">
             <div class="row-right">
-                <div class="bar-chart"><canvas id="month-chart-canvas"></canvas></div>
-                <select id="month-year-select">
-                    <option value="2011">2011</option>
-                    <option value="2012">2012</option>
-                    <option value="2013">2013</option>
-                    <option value="2014">2014</option>
-                    <option value="2015">2015</option>
-                    <option value="2016">2016</option>
-                    <option value="2017">2017</option>
-                    <option value="2018">2018</option>
-                    <option value="2019" selected>2019</option>
-                    <option value="2020">2020</option>
-                    <option value="2021">2021</option>
-                </select>
-                <select id="month-zone-select">
-                    <option value="AG">AG</option>
-                    <option value="AI">AI</option>
-                    <option value="AR">AR</option>
-                    <option value="BE">BE</option>
-                    <option value="BL">BL</option>
-                    <option value="BS">BS</option>
-                    <option value="FR">FR</option>
-                    <option value="GE">GE</option>
-                    <option value="GL">GL</option>
-                    <option value="GR">GR</option>
-                    <option value="JU">JU</option>
-                    <option value="LU">LU</option>
-                    <option value="NE">NE</option>
-                    <option value="NW">NW</option>
-                    <option value="OW">OW</option>
-                    <option value="SG">SG</option>
-                    <option value="SH">SH</option>
-                    <option value="SO">SO</option>
-                    <option value="SZ">SZ</option>
-                    <option value="TG">TG</option>
-                    <option value="TI">TI</option>
-                    <option value="UR">UR</option>
-                    <option value="VD" selected>VD</option>
-                    <option value="VS">VS</option>
-                    <option value="ZG">ZG</option>
-                    <option value="ZH">ZH</option>
-                </select>
+                <div class="bar-chart">
+                    <canvas id="month-chart-canvas"></canvas>
+                    <select id="month-year-select">
+                        <option value="2011">2011</option>
+                        <option value="2012">2012</option>
+                        <option value="2013">2013</option>
+                        <option value="2014">2014</option>
+                        <option value="2015">2015</option>
+                        <option value="2016">2016</option>
+                        <option value="2017">2017</option>
+                        <option value="2018">2018</option>
+                        <option value="2019" selected>2019</option>
+                        <option value="2020">2020</option>
+                        <option value="2021">2021</option>
+                    </select>
+                    <select id="month-zone-select">
+                        <option value="AG">AG</option>
+                        <option value="AI">AI</option>
+                        <option value="AR">AR</option>
+                        <option value="BE">BE</option>
+                        <option value="BL">BL</option>
+                        <option value="BS">BS</option>
+                        <option value="FR">FR</option>
+                        <option value="GE">GE</option>
+                        <option value="GL">GL</option>
+                        <option value="GR">GR</option>
+                        <option value="JU">JU</option>
+                        <option value="LU">LU</option>
+                        <option value="NE">NE</option>
+                        <option value="NW">NW</option>
+                        <option value="OW">OW</option>
+                        <option value="SG">SG</option>
+                        <option value="SH">SH</option>
+                        <option value="SO">SO</option>
+                        <option value="SZ">SZ</option>
+                        <option value="TG">TG</option>
+                        <option value="TI">TI</option>
+                        <option value="UR">UR</option>
+                        <option value="VD" selected>VD</option>
+                        <option value="VS">VS</option>
+                        <option value="ZG">ZG</option>
+                        <option value="ZH">ZH</option>
+                    </select>
+                </div>
             </div>
         </div>
 
@@ -320,20 +322,21 @@
         </div>
         <div class="row">
             <div>
-                <div class="bubble-chart"><canvas id="accident-bubble-chart-canvas"></canvas></div>
-                <select id="accident-1000-year-select">
-                    <option value="2011">2011</option>
-                    <option value="2012">2012</option>
-                    <option value="2013">2013</option>
-                    <option value="2014">2014</option>
-                    <option value="2015">2015</option>
-                    <option value="2016">2016</option>
-                    <option value="2017">2017</option>
-                    <option value="2018">2018</option>
-                    <option value="2019" selected>2019</option>
-                    <option value="2020">2020</option>
-                    <option value="2021">2021</option>
-                </select>
+                <div class="bubble-chart"><canvas id="accident-bubble-chart-canvas"></canvas>
+                    <select id="accident-1000-year-select">
+                        <option value="2011">2011</option>
+                        <option value="2012">2012</option>
+                        <option value="2013">2013</option>
+                        <option value="2014">2014</option>
+                        <option value="2015">2015</option>
+                        <option value="2016">2016</option>
+                        <option value="2017">2017</option>
+                        <option value="2018">2018</option>
+                        <option value="2019" selected>2019</option>
+                        <option value="2020">2020</option>
+                        <option value="2021">2021</option>
+                    </select>
+                </div>
             </div>
         </div>
         <div class="row">
@@ -349,12 +352,14 @@
         </div>
         <div class="row">
             <div>
-                <div class="bubble-chart"><canvas id="french-accident-bubble-chart-canvas"></canvas></div>
-                <select id="french-accident-1000-year-select">
-                    <option value="2019" selected>2019</option>
-                    <option value="2020">2020</option>
-                    <option value="2021">2021</option>
-                </select>
+                <div class="bubble-chart">
+                    <canvas id="french-accident-bubble-chart-canvas"></canvas>
+                    <select id="french-accident-1000-year-select">
+                        <option value="2019" selected>2019</option>
+                        <option value="2020">2020</option>
+                        <option value="2021">2021</option>
+                    </select>
+                </div>
             </div>
         </div>
     </div>
