--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <script src=" https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js "></script>
 <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.0.0"></script>
 <script src="https://unpkg.com/htmx.org/dist/htmx.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/gridjs/dist/gridjs.umd.js"></script>
 <script src="index.js" type="module"></script>
 <link rel="stylesheet" href="main.css">
 
@@ -15,6 +16,7 @@
 </head>
 
 <body>
+    <div class="placeholder-400-empty"></div>
     <div class="intro">
         <h1>Why</h1>
         <p>Lorem Cringum dolor sit amet consectetur adipisicing elit. Repellendus doloribus quia explicabo
@@ -37,7 +39,7 @@
             <div class="row-right">
                 <div class="bar-chart">
                     <canvas id="month-chart-canvas"></canvas>
-                    <select id="month-year-select">
+                    <select id="month-year-select" class="custom-select">
                         <option value="2011">2011</option>
                         <option value="2012">2012</option>
                         <option value="2013">2013</option>
@@ -50,7 +52,7 @@
                         <option value="2020">2020</option>
                         <option value="2021">2021</option>
                     </select>
-                    <select id="month-zone-select">
+                    <select id="month-zone-select" class="custom-select">
                         <option value="AG">AG</option>
                         <option value="AI">AI</option>
                         <option value="AR">AR</option>
@@ -94,7 +96,7 @@
             </div>
             <div class="row-right">
                 <div class="pie-chart"><canvas id="roads-chart-canvas"></canvas></div>
-                <select id="roads-year-select">
+                <select id="roads-year-select" class="custom-select">
                     <option value="2011">2011</option>
                     <option value="2012">2012</option>
                     <option value="2013">2013</option>
@@ -107,7 +109,7 @@
                     <option value="2020">2020</option>
                     <option value="2021">2021</option>
                 </select>
-                <select id="roads-zone-select">
+                <select id="roads-zone-select" class="custom-select">
                     <option value="AG">AG</option>
                     <option value="AI">AI</option>
                     <option value="AR">AR</option>
@@ -140,7 +142,7 @@
         <div class="row">
             <div class="row-left">
                 <div class="pie-chart"><canvas id="severity-chart-canvas"></canvas></div>
-                <select id="severity-year-select">
+                <select id="severity-year-select" class="custom-select">
                     <option value="2011">2011</option>
                     <option value="2012">2012</option>
                     <option value="2013">2013</option>
@@ -153,7 +155,7 @@
                     <option value="2020">2020</option>
                     <option value="2021">2021</option>
                 </select>
-                <select id="severity-zone-select">
+                <select id="severity-zone-select" class="custom-select">
                     <option value="AG">AG</option>
                     <option value="AI">AI</option>
                     <option value="AR">AR</option>
@@ -203,112 +205,115 @@
                     accusantium molestias adipisci! Voluptate, ullam illo.</p>
             </div>
             <div class="row-right">
-                <div class="pie-chart"><canvas id="french-roads-chart-canvas"></canvas></div>
-                <select id="french-roads-year-select">
-                    <option value="2019" selected>2019</option>
-                    <option value="2020">2020</option>
-                    <option value="2021">2021</option>
-                </select>
-                <select id="french-roads-zone-select">
-                    <option value="01">01 Ain</option>
-                    <option value="02">02 Aisne</option>
-                    <option value="03">03 Allier</option>
-                    <option value="04">04 Alpes-de-Haute-Provence</option>
-                    <option value="05">05 Hautes-Alpes</option>
-                    <option value="06">06 Alpes-Maritimes</option>
-                    <option value="07">07 Ardèche</option>
-                    <option value="08">08 Ardennes</option>
-                    <option value="09">09 Ariège</option>
-                    <option value="10">10 Aube</option>
-                    <option value="11">11 Aude</option>
-                    <option value="12">12 Aveyron</option>
-                    <option value="13">13 Bouches-du-Rhône</option>
-                    <option value="14">14 Calvados</option>
-                    <option value="15">15 Cantal</option>
-                    <option value="16">16 Charente</option>
-                    <option value="17">17 Charente-Maritime</option>
-                    <option value="18">18 Cher</option>
-                    <option value="19">19 Corrèze</option>
-                    <option value="21">21 Côte-d'Or</option>
-                    <option value="22">22 Côtes-d'Armor</option>
-                    <option value="23">23 Creuse</option>
-                    <option value="24">24 Dordogne</option>
-                    <option value="25">25 Doubs</option>
-                    <option value="26">26 Drôme</option>
-                    <option value="27">27 Eure</option>
-                    <option value="28">28 Eure-et-Loir</option>
-                    <option value="29">29 Finistère</option>
-                    <option value="2A">2A Corse-du-Sud</option>
-                    <option value="2B">2B Haute-Corse</option>
-                    <option value="30">30 Gard</option>
-                    <option value="31">31 Haute-Garonne</option>
-                    <option value="32">32 Gers</option>
-                    <option value="33">33 Gironde</option>
-                    <option value="34">34 Hérault</option>
-                    <option value="35" selected>35 Ille-et-Vilaine</option>
-                    <option value="36">36 Indre</option>
-                    <option value="37">37 Indre-et-Loire</option>
-                    <option value="38">38 Isère</option>
-                    <option value="39">39 Jura</option>
-                    <option value="40">40 Landes</option>
-                    <option value="41">41 Loir-et-Cher</option>
-                    <option value="42">42 Loire</option>
-                    <option value="43">43 Haute-Loire</option>
-                    <option value="44">44 Loire-Atlantique</option>
-                    <option value="45">45 Loiret</option>
-                    <option value="46">46 Lot</option>
-                    <option value="47">47 Lot-et-Garonne</option>
-                    <option value="48">48 Lozère</option>
-                    <option value="49">49 Maine-et-Loire</option>
-                    <option value="50">50 Manche</option>
-                    <option value="51">51 Marne</option>
-                    <option value="52">52 Haute-Marne</option>
-                    <option value="53">53 Mayenne</option>
-                    <option value="54">54 Meurthe-et-Moselle</option>
-                    <option value="55">55 Meuse</option>
-                    <option value="56">56 Morbihan</option>
-                    <option value="57">57 Moselle</option>
-                    <option value="58">58 Nièvre</option>
-                    <option value="59">59 Nord</option>
-                    <option value="60">60 Oise</option>
-                    <option value="61">61 Orne</option>
-                    <option value="62">62 Pas-de-Calais</option>
-                    <option value="63">63 Puy-de-Dôme</option>
-                    <option value="64">64 Pyrénées-Atlantiques</option>
-                    <option value="65">65 Hautes-Pyrénées</option>
-                    <option value="66">66 Pyrénées-Orientales</option>
-                    <option value="67">67 Bas-Rhin</option>
-                    <option value="68">68 Haut-Rhin</option>
-                    <option value="69">69 Rhône</option>
-                    <option value="70">70 Haute-Saône</option>
-                    <option value="71">71 Saône-et-Loire</option>
-                    <option value="72">72 Sarthe</option>
-                    <option value="73">73 Savoie</option>
-                    <option value="74">74 Haute-Savoie</option>
-                    <option value="75">75 Paris</option>
-                    <option value="76">76 Seine-Maritime</option>
-                    <option value="77">77 Seine-et-Marne</option>
-                    <option value="78">78 Yvelines</option>
-                    <option value="79">79 Deux-Sèvres</option>
-                    <option value="80">80 Somme</option>
-                    <option value="81">81 Tarn</option>
-                    <option value="82">82 Tarn-et-Garonne</option>
-                    <option value="83">83 Var</option>
-                    <option value="84">84 Vaucluse</option>
-                    <option value="85">85 Vendée</option>
-                    <option value="86">86 Vienne</option>
-                    <option value="87">87 Haute-Vienne</option>
-                    <option value="88">88 Vosges</option>
-                    <option value="89">89 Yonne</option>
-                    <option value="90">90 Territoire de Belfort</option>
-                    <option value="91">91 Essonne</option>
-                    <option value="92">92 Hauts-de-Seine</option>
-                    <option value="93">93 Seine-Saint-Denis</option>
-                    <option value="94">94 Val-de-Marne</option>
-                    <option value="95">95 Val-d'Oise</option>
-                </select>
+                <div class="pie-chart"><canvas id="french-roads-chart-canvas"></canvas>
+                    <select id="french-roads-year-select" class="custom-select">
+                        <option value="2019" selected>2019</option>
+                        <option value="2020">2020</option>
+                        <option value="2021">2021</option>
+                    </select>
+                    <select id="french-roads-zone-select" class="custom-select">
+                        <option value="01">01 Ain</option>
+                        <option value="02">02 Aisne</option>
+                        <option value="03">03 Allier</option>
+                        <option value="04">04 Alpes-de-Haute-Provence</option>
+                        <option value="05">05 Hautes-Alpes</option>
+                        <option value="06">06 Alpes-Maritimes</option>
+                        <option value="07">07 Ardèche</option>
+                        <option value="08">08 Ardennes</option>
+                        <option value="09">09 Ariège</option>
+                        <option value="10">10 Aube</option>
+                        <option value="11">11 Aude</option>
+                        <option value="12">12 Aveyron</option>
+                        <option value="13">13 Bouches-du-Rhône</option>
+                        <option value="14">14 Calvados</option>
+                        <option value="15">15 Cantal</option>
+                        <option value="16">16 Charente</option>
+                        <option value="17">17 Charente-Maritime</option>
+                        <option value="18">18 Cher</option>
+                        <option value="19">19 Corrèze</option>
+                        <option value="21">21 Côte-d'Or</option>
+                        <option value="22">22 Côtes-d'Armor</option>
+                        <option value="23">23 Creuse</option>
+                        <option value="24">24 Dordogne</option>
+                        <option value="25">25 Doubs</option>
+                        <option value="26">26 Drôme</option>
+                        <option value="27">27 Eure</option>
+                        <option value="28">28 Eure-et-Loir</option>
+                        <option value="29">29 Finistère</option>
+                        <option value="2A">2A Corse-du-Sud</option>
+                        <option value="2B">2B Haute-Corse</option>
+                        <option value="30">30 Gard</option>
+                        <option value="31">31 Haute-Garonne</option>
+                        <option value="32">32 Gers</option>
+                        <option value="33">33 Gironde</option>
+                        <option value="34">34 Hérault</option>
+                        <option value="35" selected>35 Ille-et-Vilaine</option>
+                        <option value="36">36 Indre</option>
+                        <option value="37">37 Indre-et-Loire</option>
+                        <option value="38">38 Isère</option>
+                        <option value="39">39 Jura</option>
+                        <option value="40">40 Landes</option>
+                        <option value="41">41 Loir-et-Cher</option>
+                        <option value="42">42 Loire</option>
+                        <option value="43">43 Haute-Loire</option>
+                        <option value="44">44 Loire-Atlantique</option>
+                        <option value="45">45 Loiret</option>
+                        <option value="46">46 Lot</option>
+                        <option value="47">47 Lot-et-Garonne</option>
+                        <option value="48">48 Lozère</option>
+                        <option value="49">49 Maine-et-Loire</option>
+                        <option value="50">50 Manche</option>
+                        <option value="51">51 Marne</option>
+                        <option value="52">52 Haute-Marne</option>
+                        <option value="53">53 Mayenne</option>
+                        <option value="54">54 Meurthe-et-Moselle</option>
+                        <option value="55">55 Meuse</option>
+                        <option value="56">56 Morbihan</option>
+                        <option value="57">57 Moselle</option>
+                        <option value="58">58 Nièvre</option>
+                        <option value="59">59 Nord</option>
+                        <option value="60">60 Oise</option>
+                        <option value="61">61 Orne</option>
+                        <option value="62">62 Pas-de-Calais</option>
+                        <option value="63">63 Puy-de-Dôme</option>
+                        <option value="64">64 Pyrénées-Atlantiques</option>
+                        <option value="65">65 Hautes-Pyrénées</option>
+                        <option value="66">66 Pyrénées-Orientales</option>
+                        <option value="67">67 Bas-Rhin</option>
+                        <option value="68">68 Haut-Rhin</option>
+                        <option value="69">69 Rhône</option>
+                        <option value="70">70 Haute-Saône</option>
+                        <option value="71">71 Saône-et-Loire</option>
+                        <option value="72">72 Sarthe</option>
+                        <option value="73">73 Savoie</option>
+                        <option value="74">74 Haute-Savoie</option>
+                        <option value="75">75 Paris</option>
+                        <option value="76">76 Seine-Maritime</option>
+                        <option value="77">77 Seine-et-Marne</option>
+                        <option value="78">78 Yvelines</option>
+                        <option value="79">79 Deux-Sèvres</option>
+                        <option value="80">80 Somme</option>
+                        <option value="81">81 Tarn</option>
+                        <option value="82">82 Tarn-et-Garonne</option>
+                        <option value="83">83 Var</option>
+                        <option value="84">84 Vaucluse</option>
+                        <option value="85">85 Vendée</option>
+                        <option value="86">86 Vienne</option>
+                        <option value="87">87 Haute-Vienne</option>
+                        <option value="88">88 Vosges</option>
+                        <option value="89">89 Yonne</option>
+                        <option value="90">90 Territoire de Belfort</option>
+                        <option value="91">91 Essonne</option>
+                        <option value="92">92 Hauts-de-Seine</option>
+                        <option value="93">93 Seine-Saint-Denis</option>
+                        <option value="94">94 Val-de-Marne</option>
+                        <option value="95">95 Val-d'Oise</option>
+                    </select>
+                </div>
             </div>
+
         </div>
+
         <div class="row">
             <div class="full-width-text-block">
                 <h2>Accident per 1000</h2>
@@ -323,7 +328,7 @@
         <div class="row">
             <div>
                 <div class="bubble-chart"><canvas id="accident-bubble-chart-canvas"></canvas>
-                    <select id="accident-1000-year-select">
+                    <select id="accident-1000-year-select" class="custom-select">
                         <option value="2011">2011</option>
                         <option value="2012">2012</option>
                         <option value="2013">2013</option>
@@ -354,21 +359,23 @@
             <div>
                 <div class="bubble-chart">
                     <canvas id="french-accident-bubble-chart-canvas"></canvas>
-                    <select id="french-accident-1000-year-select">
+                    <select id="french-accident-1000-year-select" class="custom-select">
                         <option value="2019" selected>2019</option>
                         <option value="2020">2020</option>
                         <option value="2021">2021</option>
                     </select>
+                    <div class="accident-table"><div id="french-table"></div></div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="conclusion">
+    
+    <!-- <div class="conclusion">
         <h1>Why</h1>
         <p>Lorem Cringum dolor sit amet consectetur adipisicing elit. Repellendus doloribus quia explicabo
             velit est inventore veritatis illo quasi, voluptate dolore similique voluptatem optio totam
             accusantium si tu trouves cette string tu aimes les garcons Voluptate, ullam illo.</p>
-    </div>
+    </div> -->
 </body>
 
 </html>
