Chart title, label bubble chart, autowidth datatable, big title

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <div class="placeholder-400-empty"></div>
+    <h1 class="big-title">JE SUIS LE GROS TITRE</h1>
     <div class="intro">
         <h1>Why</h1>
         <p>Lorem Cringum dolor sit amet consectetur adipisicing elit. Repellendus doloribus quia explicabo
@@ -38,6 +38,7 @@
         <div class="row">
             <div class="row-right">
                 <div class="bar-chart">
+                    <h3>Accident per month</h3>
                     <canvas id="month-chart-canvas"></canvas>
                     <select id="month-year-select" class="custom-select">
                         <option value="2011">2011</option>
@@ -95,6 +96,7 @@
                     accusantium molestias adipisci! Voluptate, ullam illo.</p>
             </div>
             <div class="row-right">
+                <h3>Accident per road types</h3>
                 <div class="pie-chart"><canvas id="roads-chart-canvas"></canvas></div>
                 <select id="roads-year-select" class="custom-select">
                     <option value="2011">2011</option>
@@ -141,6 +143,7 @@
         </div>
         <div class="row">
             <div class="row-left">
+                <h3>Accidents severity</h3>
                 <div class="pie-chart"><canvas id="severity-chart-canvas"></canvas></div>
                 <select id="severity-year-select" class="custom-select">
                     <option value="2011">2011</option>
@@ -205,6 +208,7 @@
                     accusantium molestias adipisci! Voluptate, ullam illo.</p>
             </div>
             <div class="row-right">
+                <h3>Accident per road types in France</h3>
                 <div class="pie-chart"><canvas id="french-roads-chart-canvas"></canvas>
                     <select id="french-roads-year-select" class="custom-select">
                         <option value="2019" selected>2019</option>
@@ -327,6 +331,7 @@
         </div>
         <div class="row">
             <div>
+                <h3>Accident per 1000 population</h3>
                 <div class="bubble-chart"><canvas id="accident-bubble-chart-canvas"></canvas>
                     <select id="accident-1000-year-select" class="custom-select">
                         <option value="2011">2011</option>
@@ -358,6 +363,7 @@
         <div class="row">
             <div>
                 <div class="bubble-chart">
+                    <h3>Accident per 1000 population in France</h3>
                     <canvas id="french-accident-bubble-chart-canvas"></canvas>
                     <select id="french-accident-1000-year-select" class="custom-select">
                         <option value="2019" selected>2019</option>
