some colors, title and buttons

--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
 </head>
 
 <body>
-    <h1 class="big-title">JE SUIS LE GROS TITRE</h1>
+    <div class="title-block">
+        <div class="big-title">Swiss roads 🇨🇭</div>
+        <div class="smol-title">A quick report on accidents in Switzerland from 2011 to 2021.</div>
+        <button class="title-button">Sources</button>
+        <button class="title-button">Q&A</button>
+    </div>
     <div class="intro">
         <h1>Why</h1>
         <p>Lorem Cringum dolor sit amet consectetur adipisicing elit. Repellendus doloribus quia explicabo
@@ -84,7 +89,6 @@
                 </div>
             </div>
         </div>
-
         <div class="row">
             <div class="text-block">
                 <h2>road accidents</h2>
@@ -317,7 +321,6 @@
             </div>
 
         </div>
-
         <div class="row">
             <div class="full-width-text-block">
                 <h2>Accident per 1000</h2>
