--- a/index.html
+++ b/index.html
@@ -389,9 +389,13 @@
 
     <div class="conclusion">
         <h1>Conclusion</h1>
-        <p>Lorem Cringum dolor sit amet consectetur adipisicing elit. Repellendus doloribus quia explicabo
-            velit est inventore veritatis illo quasi, voluptate dolore similique voluptatem optio totam
-            accusantium si tu trouves cette string tu aimes les garcons Voluptate, ullam illo.</p>
+        <p>Switzerland really excels at road safety in a sense that mortality if fare much lower than in France, Germany or Italy. 
+            However, the number of accidents per habitant seems very high compared to France for the Romandy and very low in the German speaking compared to Germany.</p>
+        <p>Is it too much of an assumption that Alemanni have excellent driver compared to their German neighbor ? And Romandy have very poor drivers compared to their French neighboor ?</p>
+        <p>Is it a problem with road configurations ? Is the process to obtain a driving licence too easy ? Is it the amount of police / speed control on the road ? Is it the density of roads per area ? The amount of drivers ?</p>
+        <p>Regardless of the answer, Austria has ≈4000, Germany ≈3600, Italy ≈2800, Switzerland ≈2000 and France ≈800 accidents per million people. 
+            The only part of Switzerland that is not safer than its direct neigbor is the Romandy by far, despite what the locals say.</p>
+        <p></p>
         <h1>Q&A</h1>
         <details>
             <summary>Are the French simply not declaring accidents ?</summary>
